Fixed scaling on mobile

--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 
 .selection-panel {
   display: grid;
-  grid-template-columns: 250px 250px;
+  grid-template-columns: 50% 50%;
   grid-template-rows: 300px;
   border: 1px solid green;
 }
